--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="card-header">
                   Recent Searches
                 </div>
-                <ul class="list-group list-group-flush">
+                <ul class="list-group list-group-flush" id="recentsearchlist">
                   <li class="list-group-item">Cras justo odio</li>
                   <li class="list-group-item">Dapibus ac facilisis in</li>
                   <li class="list-group-item">Vestibulum at eros</li>
